# imgui-cef-template-project

./: .editorconfig  .gitignore  CMakeLists.txt  copy-dlls.sh  vcpkg.json
cmake/: AppleBuild.cmake  CompilerWarnings.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
src/app/: CMakeLists.txt
src/app/App/: Main.cpp
src/core/: CMakeLists.txt
src/core/Core/: Application.cpp  Application.hpp  Instrumentor.hpp  Log.cpp  Log.hpp  StringUtils.h  Window.cpp  Window.hpp
